--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.tresee</groupId>
     <artifactId>backend</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-BETA</version>
     <packaging>war</packaging>
     <name>backend</name>
     <description>Proyect de back end de la aplicacion tresee</description>
