--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
 
 
     <build>
+        <finalName>app</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
