Acabamos el leer el csv con java, solo nos falta una vez añadidos los usuarios, enviar los correos, y crear el jwt, que se enviara con los correos

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,14 @@
             <version>1.11.133</version>
         </dependency>
 
+        <!--Open csv-->
+        <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.0</version>
+        </dependency>
+
     </dependencies>
 
 
